--- a/desings_practice/testimonial-grid-section/css/style.css
+++ b/desings_practice/testimonial-grid-section/css/style.css
@@ -4,76 +4,81 @@ body {
 .sub-body {
   color: #ffff;
   width: 70%;
-  margin-top: 100px;
-  margin-left: 300px;
+  margin-top: 6.25rem;
+  margin-left: 18.75rem;
 }
 .box1 {
   display: inline-block;
-  width: 775px;
-  height: 525px;
+  width: 48.43rem;
+  height: 32.18rem;
 }
 .top1 {
   position: relative;
-  top: 75px;
+  top: 4.68rem;
   background-color: hsl(263, 55%, 52%);
   display: inline-block;
-  width: 500px;
-  height: 250px;
-  border-radius: 10px;
-  margin-right: 25px;
-  margin-bottom: 25px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 31.25rem;
+  height: 15.625rem;
+  border-radius: 0.625rem;
+  margin-right: 1.5625rem;
+  margin-bottom: 1.5625rem;
+  box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2), 0 6px 1.25rem 0 rgba(0, 0, 0, 0.19);
 }
 .top2 {
   position: relative;
-  top: 75px;
+  bottom: 275px;
   background-color: hsl(217, 19%, 35%);
   display: inline-block;
-  width: 250px;
-  height: 250px;
-  border-radius: 10px;
+  width: 15.625rem;
+  height: 15.625rem;
+  border-radius: 0.625rem;
   float: right;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2), 0 6px 1.25rem 0 rgba(0, 0, 0, 0.19);
 }
 .bottom1 {
-  width: 250px;
-  height: 250px;
+  width: 15.625rem;
+  height: 15.625rem;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   float: left;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2), 0 6px 1.25rem 0 rgba(0, 0, 0, 0.19);
 }
 .bottom2 {
+  position: relative;
+  left: 250px;
+  bottom: 250px;
   display: inline-block;
-  width: 500px;
-  height: 250px;
+  width: 31.25rem;
+  height: 15.625rem;
   background-color: #152a38;
-  border-radius: 10px;
-  margin-left: 25px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 0.625rem;
+  margin-left: 1.5625rem;
+  box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2), 0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0.19);
 }
 .box2 {
+  position: relative;
+  bottom: 250px;
   display: inline-block;
-  width: 250px;
-  height: 525px;
+  width: 15.625rem;
+  height: 32.18rem;
   background-color: #f9fcfb;
-  border-radius: 10px;
-  margin-left: 25px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 0.625rem;
+  margin-left: 1.5625rem;
+  box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2), 0 6px 1.25rem 0 rgba(0, 0, 0, 0.19);
 }
 .content {
   font-family: 'Barlow Semi Condensed', sans-serif;
-  padding: 20px;
+  padding: 1.25rem;
 }
 .content1 {
   font-family: 'Barlow Semi Condensed', sans-serif;
-  padding: 20px;
+  padding: 1.25rem;
   position: relative;
-  bottom: 100px;
+  bottom: 6.25rem;
 }
 .content_w {
   font-family: 'Barlow Semi Condensed', sans-serif;
-  padding: 20px;
+  padding: 1.25rem;
   color: #393e46;
 }
 p {
@@ -84,24 +89,24 @@ h6 {
   font-weight: lighter;
   margin: 0;
   position: relative;
-  left: 10px;
+  left: 0.625rem;
 }
 p1 {
   font-weight: bolder;
   opacity: 0.7;
-  font-size: 13px;
+  font-size: 0.8125rem;
 }
 span {
   opacity: 0.5;
 }
 img {
-  height: 20px;
-  width: 20px;
-  border: 1px solid #8675a9;
+  height: 1.25rem;
+  width: 1.25rem;
+  border: 0.0625rem solid #8675a9;
   float: left;
   border-radius: 50%;
 }
 svg {
   position: relative;
-  left: 300px;
+  left: 18.75rem;
 }
